# dune-pdelab-howto

./: .gitignore  BSD  CMakeLists.txt  COPYING  Makefile.am  README  README.GIT  RELEASE_NOTES  config.h.cmake  configure.ac  dune-pdelab-howto.pc.in  dune.module
doc/howto/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.dist.am  adaptivity.tex  algebraicformulation.tex  constrainedspaces.tex  ellipticproblems.tex  example03.mov  functionspaces.tex  instationaryproblems.tex  introduction.tex  istl-backend.tex  lit.bib  operators.tex  parallel_computing.tex  pdelab-howto-article.tex  pdelab-howto-beamer.tex  pdelab-howto-main.tex  stationaryproblems.tex  summary.tex  systems.tex  weightedresidual.tex  workflow.tex
doc/howto/EPS/: P1P1.eps  P1P1b.eps  P2P2.eps  P2P2b.eps  SecMesh2D.eps  SecMesh2D_fm  SecMesh2D_fm.eps  THBaum.eps  aggregates_problem_f_2d_65536_cl015_var8_mean0.eps  backend.dia  backend.eps  blockstructure.eps  dd.eps  example01a_Q1.eps  example01a_Q2.eps  example01a_RT.eps  example02_Q1.eps  example03.eps  example04.eps  example05_0_05.eps  example05_0_5.0.eps  example05_0_50.0.eps  example05_1_05.eps  example05_1_5.eps  example05_1_50.eps  function3.eps  function3.fig  function3_fm  function3_fm.eps  hammer_surfgroups.eps  istlsolver.dia  istlsolver.eps  iwrlogo.eps  konstr_n_uberl_str.eps  konstr_n_uberl_unstr.eps  konstr_uberl_str.eps  konstr_uberl_unstr.eps  modules.eps  modules.fig  numalayout.eps  (+11 more)
doc/howto/src_examples/: cadsample.cc  cadsample_P1.hh  cadsample_operator.hh  cadsample_parameter.hh  e02.cc  e02_P1.hh  e02_operator.hh  e02_parameter.hh  entity.cc  gridtest.cc  intersection.cc  intersection2.cc  iterators.cc
examples/: Makefile.am  adaptivity.cc  analyticfunction.hh  boundaryconditiontypefunction.hh  cg_stokes.cc  cg_stokes_instat.cc  componenttransportop.hh  dg.cc  dgdiffusion-hp.cc  dgoverlapping.cc  dgstokes.cc  dnapl.cc  dnaplfv.cc  dnaplmfd.cc  example01.cc  example01a_Q1.hh  example01a_Q2.hh  example01a_RT.hh  example01a_operator.hh  example01b_Q2.hh  example01b_operator.hh  example02.cc  example02_Q1.hh  example02_bcextension.hh  example02_bctype.hh  example02_operator.hh  example03.cc  example03_Q2.hh  example03_bctype.hh  example03_operator.hh  example03_toperator.hh  example04.cc  example04.hh  example04_operator.hh  example05.cc  example05_Q1Q1.hh  example05_Q2Q2.hh  example05_initial.hh  example05_operator.hh  example05_toperator.hh  (+63 more)
examples/grids/: CuKav.geo  curved2d.geo  curved2d.msh  pyramid.geo  pyramid.msh
examples/vtk/: s0001:dnapl-alex2-2d-00000.pvtu  s0001:dnapl-alex2-2d-00001.pvtu  s0001:p0000:dnapl-alex2-2d-00000.vtu  s0001:p0000:dnapl-alex2-2d-00001.vtu
src/: CMakeLists.txt  Makefile.am
src/benchmark/: .gitignore  CMakeLists.txt  Makefile.am  cgstokes-old.cc  cgstokes.cc  cgstokes.ini
src/boilerplatetutorial/: .gitignore  CMakeLists.txt  Makefile.am  advection_instationary.cc  advection_stationary.cc  heat_instationary.cc  poisson_adaptive.cc  poisson_uniform.cc
src/convection-diffusion/: .gitignore  CMakeLists.txt  Makefile.am  analyticfunction.hh  dgdiffusion-hp.cc  dgdiffusion.cc  dgldomain.cc  dgoverlapping.cc  diffusion.cc  instationarytest.cc  l2interpolationerror.hh  laplacedirichlet.hh  laplacedirichletccfv.cc  laplacedirichletmain.cc  laplacedirichletop.hh  ldomain.cc  ldomain.ini  mimetic.cc  nonlineardiffusion.cc  nonoverlappingsinglephaseflow.cc  overlappingsinglephaseflow.cc  overlappingsinglephaseflowccfv.cc  parameterA.hh  parameterB.hh  parameterC.hh  parameterD.hh  parameterE.hh  parameterF.hh  parameter_base.hh  parameter_factory.hh  poisson.cc  poissonhdivconforming.hh  problemA.hh  problemB.hh  problemC.hh  problemD.hh  problemE.hh  problemF.hh  reentrantcorner.cc  reentrantcornerproblem.hh  (+4 more)
src/convection-diffusion/grids/: CuKav.msh  cube.geo  cube3205.msh  (+2 more)
src/course/: example01.cc  example01a_Q1.hh  example01a_RT.hh  example01a_operator.hh  example02_bctype.hh  example02_operator.hh  example03.cc  example03_Q2.hh  example04.cc  example04.hh  example05_Q1Q1.hh  example05_operator.hh  example05_toperator.hh  example06_Q1Q1.hh
src/course-examples/: .gitignore  CMakeLists.txt  Makefile.am  adaptivity.cc  example01.cc  example01_main.hh  example01a_Q1.hh  example01a_Q2.hh  example01a_Qk.hh  example01a_RT.hh  example01a_operator.hh  example01b_Q2.hh  example01b_operator.hh  example02.cc  example02_Q1.hh  example02_bctype.hh  example02_operator.hh  example03.cc  example03_Q2.hh  example03_bctype.hh  example03_operator.hh  example03_toperator.hh  example04.cc  example04.hh  example04_operator.hh  example05.cc  example05_Q1Q1.hh  example05_Q2Q2.hh  example05_QkQk.hh  example05_operator.hh  example05_toperator.hh  example06.cc  example06_Q1Q1.hh  example06_bctype.hh  example07.cc  example07_adaptivity.hh  example07_error_estimator.hh
src/course-gridfunctionspace/: .gitignore  CMakeLists.txt  Makefile.am  analyticfunction.hh  l2interpolationerror.hh  parallelgfs.cc  q1constrainedinterpolate.hh  q1constrainedinterpolatemain.cc  q1constraints.hh  q1constraintsparameters.hh  q1gridfunctionspace.hh  q1gridfunctionspacemain.cc  q1interpolate.hh  q1interpolatemain.cc  q1interpolationerror.hh  q1interpolationerrormain.cc  q1localfiniteelement.hh  q1localfiniteelementmap.hh  q2interpolationerror.hh  q2interpolationerrormain.cc  thinterpolate.hh  thinterpolatemain.cc  thvelocity.hh
src/linear-acoustics/: .gitignore  CMakeLists.txt  Makefile.am  heterogeneoussquare.cc
src/maxwell/: .gitignore  CMakeLists.txt  Makefile.am  modelproblem.cc  mysphere.geo  mysphere1.msh
src/navier-stokes/: .gitignore  CMakeLists.txt  Makefile.am  cg_stokes.cc  cg_stokes_initial.hh  cg_stokes_instat.cc  cg_stokes_instat.ini  cgstokes.cc  cgstokes.ini  cgstokes_initial.hh  cgstokes_instat.cc  cgstokes_instat.ini  dgnavierstokesvecfem.cc  dgstokes.cc  dgstokes.ini  navierstokes_initial.hh  sproblemA.hh
src/two-phase/: .gitignore  CMakeLists.txt  Makefile.am  dnaplfv.cc  dnaplmfd.cc  twophasemfd.hh
src/utility/: CMakeLists.txt  Makefile.am  basicunitcube.hh  gridexamples.hh  permeability_generator.hh
(+45 files in other folders)
